--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         var titleText = "Hi! I'm Troy Kinney.";
         var description = "I'm a high school developer and tech nerd. Feel free to look around.";
         const speed = 50; // Typing speed in milliseconds
-        window.onload=startTyping();
+        window.onload=startTyping;
         
         function startTyping() {
             const container = document.getElementById("title");
