--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             font-family: 'Courier Prime', monospace;
             padding: 45px;
         }
+
+        h1 {
+            color: green;
+            font-family: 'Courier Prime', monospace;
+            font-size: 24px;
+        }
         
         button{
             border-color: green;
@@ -33,7 +39,7 @@
 
 <body>
     <div id="text">
-        <h id="title"></h>
+        <h1 id="title"></h1>
         <p id="desc"></p>
     </div>
     <div id="options1" style="display: none;">
