--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 console.log(titleIndex);
                 setTimeout(typeTitle, speed);
             } else {
-                typeDescrition();
+                typeDescription();
             }
         }
         function typeDescription() {
