--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <h1 id="title"></h1>
             <p id="desc"></p>
         </div>
+        <iframe src="troy.txt" width="100%" height="300" style="border:none; font-family: monospace;"></iframe>
         <div id="options" style="display: none;">
         </div>
     </div>
