--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     #ascii-art {
       font-family: 'Courier Prime', monospace;
       white-space: pre;
-      overflow-x: auto;
-      overflow-y: auto;
+      overflow: auto;
       max-width: 100%;
-      max-height: 600px;
-      font-size: 6px;
-      line-height: 1.1;
-      margin-top: 20px;
+      max-height: 80vh;
+      font-size: 4px;         /* Shrinks the characters horizontally */
+      line-height: 3.5px;     /* Shrinks them vertically to match width */
+      margin: 0 auto;
+      display: block;
+      padding: 20px;
       border: 1px solid green;
-      padding: 10px;
     }
   </style>
 </head>
