--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       border-color: green;
       font-family: "Funnel Sans", sans-serif;
       font-size: 33px;
-      color: black;
+      color: green;
       padding: 20px;
       background-color: black;
     }
@@ -67,7 +67,7 @@
       <h1 id="title" style="text-align:center;"></h1>
       <p id="desc" style="text-align:center;"></p>
     </div>
-    <pre id="ascii-art">Loading ASCII art...</pre>
+    <!-- <pre id="ascii-art">Loading ASCII art...</pre> -->
     <div id="options" style="display: none;">
       <button>Work</button>
       <button>Involvements</button>
