--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <h1 id="title" style="text-align:center;"></h1>
       <p id="desc" style="text-align:center;"></p>
     </div>
-    <div id="asciiContainer">
+<!--     <div id="asciiContainer">
       <iframe class="ascii-art" src=troy.txt>
-    </div>
+    </div> -->
     <div id="options" style="display: none;">
       <button>Work</button>
       <button>Involvements</button>
