--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
       color: green;
       font-family: 'Lexend Deca', sans-serif;
       font-weight: 525;
-      font-size: 24px;
+      font-size: 30px;
     }
 
     button {
       border-color: green;
       font-family: "Funnel Sans", sans-serif;
-      font-size: 33px;
+      font-size: 20px;
       color: green;
       padding: 20px;
+      margins: 20px;
       background-color: black;
     }
 
@@ -42,6 +43,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      valign: "middle";
       height: 100%;
     }
 
@@ -70,7 +72,7 @@
 <!--     <div id="asciiContainer">
       <iframe class="ascii-art" src=troy.txt>
     </div> -->
-    <div id="options" style="display: none;">
+    <div id="options" style="display: none; padding:50px;">
       <button>Work</button>
       <button>Involvements</button>
       <button>Philosophy</button>
