--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       color: green;
       font-family: 'Lexend Deca', sans-serif;
       font-weight: 350;
+      font-size: 25px;
       padding: 45px;
       margin: 0;
     }
@@ -19,13 +20,13 @@
       color: green;
       font-family: 'Lexend Deca', sans-serif;
       font-weight: 525;
-      font-size: 30px;
+      font-size: 40px;
     }
 
     button {
       border-color: green;
       font-family: "Funnel Sans", sans-serif;
-      font-size: 20px;
+      font-size: 30px;
       color: green;
       padding: 20px;
       margins: 20px;
@@ -73,7 +74,7 @@
       <iframe class="ascii-art" src=troy.txt>
     </div> -->
     <div id="options" style="display: none; padding:50px;">
-      <button>Work</button>
+      <button src=work.html>Work</button>
       <button>Involvements</button>
       <button>Philosophy</button>
       <button>Resume</button>
