--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
     <button class="toggle-button" onclick="toggleDarkMode()">Toggle Theme</button>
     <header>
         <h1>Troy E. Kinney</h1>
-        <p><a href="mailto:troy@ekinney.com">troy@ekinney.com</a> • (949) 350-3907 • <a href="https://troyekinney.com">troyekinney.com</a></p>
+        <p><a href="mailto:troy@ekinney.com">troy@ekinney.com</a> • (949) 350-3907 • <a href="https://www.troyekinney.com">troyekinney.com</a></p>
     </header>
 
     <section>
@@ -71,8 +71,8 @@
 
     <section>
         <h2>Experience</h2>
-        <p><strong>Oakhouse Church</strong> — Audio & Lighting Tech<br><em>2023–Present</em><br>
-        Operate sound, lighting, and projection systems for weekly services. Troubleshoot Shure SLXD wireless mics, run Onyx for lighting control, and assist with livestream tech. Provide support for AV setup, teardown, and stage management.</p>
+        <p><strong>Oakhouse Church</strong> — Audio & Lighting Tech<br><em>2022–Present</em><br>
+        Operate sound, lighting, and projection systems for weekly services. Run Onyx for lighting control & design cues within Onyx taking advantage of FX, dimming, rgba & rgbw lightins. Assist with livestream tech. Provide support for AV setup, teardown, and stage management.</p>
         
         <p><strong>ASB Tech Team, Aliso Niguel HS</strong> — AV Operator<br><em>2023–Present</em><br>
         Mix audio, run lights, and manage technical systems for school events. Coordinate with student leadership to execute assemblies, rallies, and productions.</p>
@@ -83,8 +83,8 @@
         <p><strong>Smart Power Distro Unit (In Progress)</strong><br>
         Designing an ESP32-powered rackmount distro with touchscreen interface and 6x 20A circuit monitoring. Includes live amp/watt readout, system logs, and interactive UI.</p>
 
-        <p><strong>LoreSearch Web Game</strong><br>
-        Built a typewriter-style interactive clue game using JavaScript and JSON. Integrated dynamic routing, character lore, and a clue-based map interface.</p>
+        <p><strong>Lorelobby</strong><br>
+        Interactive lorefinding game sent via text message, hosted via github.</p>
 
         <p><strong>Personal Website</strong> — <a href="https://troyekinney.com">troyekinney.com</a><br>
         Built and deployed portfolio using GitHub Pages and Cloudflare. Implemented custom styling, domain configuration, and dynamic content architecture.</p>
@@ -94,7 +94,7 @@
         <h2>Skills</h2>
         <ul>
             <li>Live Audio (Behringer WING, X32, Allen & Heath SQ7)</li>
-            <li>Lighting Design (Chauvet, Onyx, DMX)</li>
+            <li>Lighting Design (Chauvet, Obsidian Onyx, DMX)</li>
             <li>Web Development (HTML, CSS, JavaScript, GitHub)</li>
             <li>Soldering, rack design, touch UI integration</li>
             <li>Event setup, crowd experience, creative tech design</li>
@@ -104,7 +104,7 @@
     <section>
         <h2>Awards</h2>
         <ul>
-            <li>Student of the Year, AVID 8th Grade</li>
+            <li>Student of the Year, 8th Grade</li>
             <li>Top Performer, AP Computer Science Principles</li>
             <li>Additional academic recognition across multiple subjects</li>
         </ul>
