--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <button src=work.html>Work</button>
       <button>Involvements</button>
       <button>Philosophy</button>
-      <button>Resume</button>
+      <button src=resume.html>Resume</button>
       <button>References</button>
     </div>
   </div>
