--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,7 @@
             top: 10px;
             right: 10px;
             padding: 0.5rem 1rem;
+            margin: 15px;
             background: none;
             border: 1px solid currentColor;
             border-radius: 4px;
@@ -67,6 +68,7 @@
             top: 10px;
             right: 10px;
             padding: 0.5rem 1rem;
+            margin: 15px;
             background: none;
             border: 1px solid currentColor;
             border-radius: 4px;
