--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
       <iframe class="ascii-art" src=troy.txt>
     </div> -->
     <div id="options" style="display: none; padding:50px;">
-      <button src=work.html>Work</button>
-      <button>Involvements</button>
-      <button>Philosophy</button>
-      <button src=resume.html>Resume</button>
-      <button>References</button>
+      <button onclick="window.location.href = 'https://www.troyekinney.com/work.html';">Work</button>
+      <button onclick="window.location.href = 'https://www.troyekinney.com/involvements.html';">Involvements</button>
+      <button onclick="window.location.href = 'https://www.troyekinney.com/philosophy.html';">Philosophy</button>
+      <button onclick="window.location.href = 'https://www.troyekinney.com/resume.html';">Resume</button>
+      <button onclick="window.location.href = 'https://www.troyekinney.com/references.html';">References</button>
     </div>
   </div>
 
