--- a/resume.html
+++ b/resume.html
@@ -77,8 +77,10 @@
     </style>
 </head>
 <body>
-    <button class="toggle-button" onclick="toggleDarkMode()">Toggle Theme</button>
-    <button class="home-button" onclick="window.location.href = 'https://www.troyekinney.com';">Return Home</button>
+    <div>
+        <button class="toggle-button" onclick="toggleDarkMode()">Toggle Theme</button>
+        <button class="home-button" onclick="window.location.href = 'https://www.troyekinney.com';">Return Home</button>
+    </div>
     <header>
         <h1>Troy E. Kinney</h1>
         <p><a href="mailto:troy@ekinney.com">troy@ekinney.com</a> • (949) 350-3907 • <a href="https://www.troyekinney.com">troyekinney.com</a></p>
