--- a/resume.html
+++ b/resume.html
@@ -52,23 +52,15 @@
             margin-bottom: 1.5rem;
         }
 
-        .toggle-button {
+        .button-container {
             position: fixed;
             top: 10px;
             right: 10px;
-            padding: 0.5rem 1rem;
-            margin: 15px;
-            background: none;
-            border: 1px solid currentColor;
-            border-radius: 4px;
-            cursor: pointer;
+            display: flex;
+            gap: 10px;
         }
-        .home-button {
-            position: fixed;
-            top: 10px;
-            right: 10px;
+        .toggle-button, .home-button {
             padding: 0.5rem 1rem;
-            margin: 15px;
             background: none;
             border: 1px solid currentColor;
             border-radius: 4px;
@@ -77,7 +69,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div class="button-container">
         <button class="toggle-button" onclick="toggleDarkMode()">Toggle Theme</button>
         <button class="home-button" onclick="window.location.href = 'https://www.troyekinney.com';">Return Home</button>
     </div>
@@ -133,6 +125,11 @@
     </section>
 
     <script>
+        // Check system preference on load
+        if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+            document.body.classList.add('dark-mode');
+        }
+    
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
