--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      valign: "middle";
-      height: 100%;
+      justify-content: center;
+      height: 100vh;
     }
 
     #ascii-art {
