--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #121212;
-      color: #f0f0f0;
+      background-color: black;
+      color: green;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -24,9 +24,25 @@
       text-decoration: none;
       border-bottom: 1px solid;
     }
+    #foreground-overlay {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-image: url('media/crtLines.png'); /* <-- your image path here */
+      background-size: cover; /* or 'contain' if you prefer */
+      background-repeat: no-repeat;
+      background-position: center;
+      opacity: 0.1; /* adjust this for subtlety */
+      pointer-events: none; /* ensures it doesn't block clicks */
+      z-index: 1000;
+    }
   </style>
 </head>
 <body>
+  <div id="foreground-overlay"></div>
   <h1>404</h1>
   <p>Looks like you took a wrong turn.</p>
   <p><a href="/">Return to the homepage</a></p>
