--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <title>404 Not Found</title>
   <style>
     body {
@@ -17,7 +18,10 @@
       text-align: center;
     }
     h1 {
-      font-size: 3rem;
+      font-size: 4rem;
+      font-family: "Coral Pixels", serif;
+      font-weight: 400;
+      font-style: normal;
     }
     a {
       color: #00bcd4;
