--- a/404.html
+++ b/404.html
@@ -2,48 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/404.css">
   <title>404 Not Found</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: black;
-      color: green;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-    }
-    h1 {
-      font-size: 4rem;
-      font-family: "Coral Pixels", serif;
-      font-weight: 400;
-      font-style: normal;
-    }
-    a {
-      color: #00bcd4;
-      text-decoration: none;
-      border-bottom: 1px solid;
-    }
-    #foreground-overlay {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-image: url('media/crtLines.png'); /* <-- your image path here */
-      background-size: cover; /* or 'contain' if you prefer */
-      background-repeat: no-repeat;
-      background-position: center;
-      opacity: 0.1; /* adjust this for subtlety */
-      pointer-events: none; /* ensures it doesn't block clicks */
-      z-index: 1000;
-    }
-  </style>
 </head>
 <body>
   <div id="foreground-overlay"></div>
