--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="foreground-overlay"></div>
-  <h1>404</h1>
+  <h1>ERROR 404</h1>
   <p>Looks like you took a wrong turn.</p>
   <p><a href="/">Return to the homepage</a></p>
 </body>
