--- a/work.html
+++ b/work.html
@@ -9,8 +9,8 @@
         :root {
             --bg-color-light: #ffffff;
             --text-color-light: #000000;
-            --bg-color-dark: #black;
-            --text-color-dark: #green;
+            --bg-color-dark: black;
+            --text-color-dark: green;
         }
 
         @media (prefers-color-scheme: dark) {
