--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 
     function contentDeterminer(section) {
       contentIndex = 0;
-      if section === "philosophy" {
+      if (section === "philosophy") {
         typeContent(philosophyText);
-      } else if section === "references" {
+      } else if (section === "references") {
         typeContent(referencesText);
       }
     }
