--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     const titleText = "Hi! I'm Troy Kinney.";
     const description = "I'm a high school developer and tech nerd. Feel free to look around.";
 
-    const philosophyText = "";
+    const philosophyText = "I used to be a big-time procrastinater, and all though I still am at heart, I understand when it really is better to just get the job done. \n I believe it is important to always be ontop of your work & ahead of due dates, preventing late completions and any other issues that may arise.";
+    const referencesText = "This is a placeholder";
     
     const speed = 35;
   
