--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
     .fade-in {
       opacity: 0;
-      animation: fadeIn 0.8s ease-in forwards;
+      animation: fadeIn 0.5s ease-in forwards;
     }
     
     @keyframes fadeIn {
@@ -89,6 +89,7 @@
       transform: translate(-50%, -50%);
       display: flex;
       flex-direction: column;
+      width:100vw;
       align-items: center;
     }
 
@@ -124,7 +125,6 @@
       <button onclick="window.location.href = 'https://www.troyekinney.com/resume.html';">Resume</button>
       <button onclick="contentDeterminer('references')">References</button>
     </div>
-    <br>
     <div id="contentContainer">
       <p id="content" style="text-align:center; display:none;"></p>
     </div>
