--- a/resume.html
+++ b/resume.html
@@ -65,6 +65,9 @@
             border: 1px solid currentColor;
             border-radius: 4px;
             cursor: pointer;
+            background-color: var(--bg-color-light);
+            color: var(--text-color-light);
+            transition: background-color 0.3s, color 0.3s;
         }
     </style>
 </head>
