--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Troy E. Kinney - Resume</title>
     <link rel="stylesheet" href="css/dark-toggle.css">
-    <link rel="icon" type="image/svg+xml" href="media/t.svg">
+    <link rel="icon" type="image/svg+xml" href="media/T.svg">
 </head>
 <body>
     <div class="button-container">
