updated work formatting to match resume formatting, updated work

--- a/work.html
+++ b/work.html
@@ -1,72 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Troy E. Kinney - Work</title>
-    <style>
-        :root {
-            --bg-color-light: #ffffff;
-            --text-color-light: #000000;
-            --bg-color-dark: black;
-            --text-color-dark: green;
-        }
-
-        @media (prefers-color-scheme: dark) {
-            body {
-                background-color: var(--bg-color-dark);
-                color: var(--text-color-dark);
-            }
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 2rem;
-            background-color: var(--bg-color-light);
-            color: var(--text-color-light);
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .dark-mode {
-            background-color: var(--bg-color-dark);
-            color: var(--text-color-dark);
-        }
-
-        header {
-            margin-bottom: 2rem;
-        }
-
-        h1 {
-            font-size: 2em;
-            margin: 0;
-        }
-
-        a {
-            color: inherit;
-        }
-
-        section {
-            margin-bottom: 1.5rem;
-        }
-
-        .button-container {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            display: flex;
-            gap: 10px;
-        }
-        .toggle-button, .home-button {
-            padding: 0.5rem 1rem;
-            background: none;
-            border: 1px solid currentColor;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="css/dark-toggle.css">
 </head>
 <body>
     <div class="button-container">
@@ -84,7 +22,7 @@
         <p><strong>Smart Power Distro Unit (In Progress)</strong><br>
         Work to design a high-powered power distrobution unit with two others on the ASB Tech Team at Aliso Niguel HS.</p>
 
-        <p><strong>Lorelobby</strong><br>
+        <p><strong><a href="https://lorelobby.troyekinney.com">Lorelobby</a></strong><br>
         Interactive lorefinding game sent via text message, hosted via github.</p>
 
         <p><strong>Personal Website</strong> — <a href="https://troyekinney.com">troyekinney.com</a><br>
