Theme icons in work

--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <title>Troy E. Kinney - Resume</title>
     <link rel="stylesheet" href="css/dark-toggle.css">
     <link rel="icon" type="image/svg+xml" href="media/T.svg">
+    <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="button-container">
