--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <button onclick="contentDeterminer('philosphy')">Philosophy</button>
       <button onclick="window.location.href = 'https://www.troyekinney.com/resume.html';">Resume</button>
       <button onclick="contentDeterminer('references')">References</button>
+      <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
     </div>
     <div id="contentContainer">
       <p id="content" style="text-align:center; display:none;"></p>
