--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
 <body>
     <div class="button-container">
         <button id="dark-toggle" class="toggle-button" onclick="toggleDarkMode()">
-            <span id="toggle-icon" class="icon"><i class="fa-regular fa-moon"></i></span> Toggle Theme
+            <span id="toggle-icon" class="icon"><i class="fa-regular fa-moon"></i></span>
         </button>
         <button class="home-button" onclick="window.location.href = 'https://www.troyekinney.com';">Return Home</button>
     </div>
