--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Troy E. Kinney - Work</title>
     <link rel="stylesheet" href="css/dark-toggle.css">
+    <link rel="icon" type="image/svg+xml" href="media/T.svg">
     <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -34,11 +35,11 @@
         const style = document.createElement('style');
         style.innerHTML = `
             .icon {
-                transition: opacity 0.3s;
+                transition: opacity 0.6s;
                 opacity: 1;
             }
             .icon.fade {
-                opacity: 0.5;
+                opacity: 0.25;
             }
         `;
         document.head.appendChild(style);
@@ -51,7 +52,7 @@
                     ? '<i class="fa-solid fa-sun"></i>'
                     : '<i class="fa-regular fa-moon"></i>';
                 iconSpan.classList.remove('fade');
-            }, 300);
+            }, 600);
         }
 
         // Initial icon
