added icons to index

--- a/index.html
+++ b/index.html
@@ -122,10 +122,13 @@
     </div>-->
     <div id="socials" class="iconHolder">
       <button id="email" class="social-button" onclick="window.location.href = 'mailto:troy@ekinney.com';">
-        <span id="email-icon" class="icon"></span>
+        <span id="email-icon" class="icon"><i class="fa-solid fa-envelope"></i></span>
       </button>
-      <button id="linkedIn" class="social-button" onclick="window.location.href = 'https://www.linkedin.com/in/troy-kinney-85a516376/';">
-        <span id="linkedIn-icon" class="icon"></span>
+      <button id="linkedIn" class="social-button" onclick="window.location.href = 'https://www.linkedin.com/in/troy-e-kinney';">
+        <span id="linkedIn-icon" class="icon"><i class="fa-brands fa-square-linkedin"></i></span>
+      </button>
+      <button id="github" class="social-button" onclick="window.location.href = 'https://www.github.com/treki722';">
+        <span id="github-icon" class="icon"><i class="fa-brands fa-github"></i></span>
       </button>
     </div>
     <div id="options" style="display: none; padding:50px;">
