--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/dark-toggle.css">
     <link rel="icon" type="image/svg+xml" href="media/T.svg">
     <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 <body>
     <div class="button-container">
@@ -64,6 +65,11 @@
     <section>
         <h2>Education</h2>
         <p><strong>Aliso Niguel High School</strong> — Sophomore<br>Graduating Class of 2027</p>
+    </section>
+
+    <section>
+        <h2>Contact me via LinkedIn</h2>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="troy-e-kinney" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/troy-e-kinney?trk=profile-badge">Troy Kinney</a></div>
     </section>
     
     <script>
