--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <span id="github-icon" class="icon"><i class="fa-brands fa-github"></i></span>
       </button>
     </div>
-    <div id="options" style="display: none; padding:50px;">
+    <div id="options" style="display: none; margin-top:15px; margin:30px;">
       <button onclick="window.location.href = 'https://www.troyekinney.com/work.html';">Work</button>
       <button onclick="window.location.href = 'https://www.troyekinney.com/involvements.html';">Involvements</button>
       <button onclick="contentDeterminer('philosphy')">Philosophy</button>
