--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
   <div class="wrapper">
     <div id="text" style="width:100%;">
-      <h1 id="title" style="text-align:center;">SOME TEXT</h1>
+      <h1 id="title" style="text-align:center;"></h1>
       <p id="desc" style="text-align:center;"></p>
     </div>
 <!--<div id="asciiContainer">
