--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Troy E. Kinney - Resume</title>
     <link rel="stylesheet" href="css/dark-toggle.css">
-    <link rel="icon" type="image/svg+xml" href="media/T.svg">
+    <link rel="icon" type="image/svg+xml" href="media/TK.svg">
     <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
