--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Troy E. Kinney - Work</title>
     <link rel="stylesheet" href="css/dark-toggle.css">
-    <link rel="icon" type="image/svg+xml" href="media/T.svg">
+    <link rel="icon" type="image/svg+xml" href="media/TK.svg">
     <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
 </head>
 <body>
