Attached style.css to index.html, removed style tags from index.html (now in style.css); moved social icons in resume to below title

--- a/resume.html
+++ b/resume.html
@@ -18,24 +18,24 @@
     </div>
     <header>
         <h1>Troy E. Kinney</h1>
-        <div id="socials" class="button-container">
-            <button id="email" class="icon-button" onclick="window.location.href = 'mailto:troy@ekinney.com';">
-                <span id="email-icon" class="icon"><i class="fa-solid fa-envelope"></i></span>
-            </button>
-            <button id="phone" class="icon-button" onclick="window.location.href = 'tel:+19493503907';">
-                <span id="phone-icon" class="icon"><i class="fa-solid fa-phone"></i></span>
-            </button>
-            <button id="website" class="icon-button" onclick="window.location.href = 'https://www.troyekinney.com';">
-                <span id="web-icon" class="icon"><i class="fa-solid fa-globe"></i></span>
-            </button>
-            <button id="linkedIn" class="icon-button" onclick="window.location.href = 'https://www.linkedin.com/in/troy-e-kinney';">
-                <span id="linkedIn-icon" class="icon"><i class="fa-brands fa-square-linkedin"></i></span>
-            </button>
-            <button id="github" class="icon-button" onclick="window.location.href = 'https://www.github.com/treki722';">
-                <span id="github-icon" class="icon"><i class="fa-brands fa-github"></i></span>
-            </button>
-        </div>
     </header>
+    <div id="socials" class="button-container" style="margin-bottom: 2rem;">
+        <button id="email" class="icon-button" onclick="window.location.href = 'mailto:troy@ekinney.com';">
+            <span id="email-icon" class="icon"><i class="fa-solid fa-envelope"></i></span>
+        </button>
+        <button id="phone" class="icon-button" onclick="window.location.href = 'tel:+19493503907';">
+            <span id="phone-icon" class="icon"><i class="fa-solid fa-phone"></i></span>
+        </button>
+        <button id="website" class="icon-button" onclick="window.location.href = 'https://www.troyekinney.com';">
+            <span id="web-icon" class="icon"><i class="fa-solid fa-globe"></i></span>
+        </button>
+        <button id="linkedIn" class="icon-button" onclick="window.location.href = 'https://www.linkedin.com/in/troy-e-kinney';">
+            <span id="linkedIn-icon" class="icon"><i class="fa-brands fa-square-linkedin"></i></span>
+        </button>
+        <button id="github" class="icon-button" onclick="window.location.href = 'https://www.github.com/treki722';">
+            <span id="github-icon" class="icon"><i class="fa-brands fa-github"></i></span>
+        </button>
+    </div>
 
     <section>
         <h2>Experience</h2>
