adjusted style.css for mobile, adjusted hover effect for buttons, hid social icons before typewriter effect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--<div id="asciiContainer">
       <iframe class="ascii-art" src=troy.txt>
     </div>-->
-    <div id="socials" class="iconHolder">
+    <div id="socials" style="display: none;">
       <button id="email" class="social-button" onclick="window.location.href = 'mailto:troy@ekinney.com';">
         <span id="email-icon" class="icon"><i class="fa-solid fa-envelope"></i></span>
       </button>
