fixed social buttons to actually show on resume

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     <header>
         <h1>Troy E. Kinney</h1>
     </header>
-    <div id="socials" class="button-container" style="display: none; margin-bottom: 2rem;">
+    <div id="socials" class="button-container" style="margin-bottom: 2rem;">
         <button id="email" class="icon-button" onclick="window.location.href = 'mailto:troy@ekinney.com';">
             <span id="email-icon" class="icon"><i class="fa-solid fa-envelope"></i></span>
         </button>
